Fix the cut off in the letters of the buttons.

--- a/app/styles/localStyles.css
+++ b/app/styles/localStyles.css
@@ -529,5 +529,5 @@
   display: inline-block;
   text-overflow: ellipsis;
   overflow: hidden;
-  line-height: 17px;
+  line-height: 20px;
 }
